# bluemarble

./: CMakeLists.txt  Matrices.cpp  Vectors.cpp  main-17-05.cpp  main.cpp
shaders/: triangle_frag.glsl  triangle_vert.glsl
